name:                sf-env
version:             0.1.0.0
-- synopsis:            Microsoft Service Fabric environment variables for Haskell applications
description:         Microsoft Service Fabric environment variables for Haskell applications
homepage:            https://github.com/paulrzcz/sf-env#readme
license:             BSD3
license-file:        LICENSE
author:              Pavel Ryzhov
maintainer:          pavel.ryzhov@gmail.com
copyright:           Velrina s.r.o. 2017 (c) Pavel Ryzhov
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Velrina.Fabric
  other-modules:       Velrina.Fabric.Internal
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/paulrzcz/sf-env
